--- a/Source/RDCManager/Views/RDCUserAccountsView.xaml
+++ b/Source/RDCManager/Views/RDCUserAccountsView.xaml
@@ -46,7 +46,7 @@
             <Button x:Name="Save" Width="50" Height="50" Background="#0747a6" Padding="0" Margin="30,0,0,0">
                 <materialDesign:PackIcon Kind="ContentSave" Width="32" Height="32" />
             </Button>
-            <Button x:Name="NewAccount" Width="50" Height="50" Background="#0747a6" Padding="0" Margin="30,0,0,0">
+            <Button x:Name="New" Width="50" Height="50" Background="#0747a6" Padding="0" Margin="30,0,0,0">
                 <materialDesign:PackIcon Kind="NewBox" Width="32" Height="32" />
             </Button>
         </StackPanel>
