--- a/Source/RDCManager/Views/ShellView.xaml
+++ b/Source/RDCManager/Views/ShellView.xaml
@@ -8,7 +8,7 @@
     <Grid>
         <DockPanel>
             <Grid DockPanel.Dock="Left" Background="#0747a6">
-                <StackPanel>
+                <StackPanel VerticalAlignment="Top">
                     <Button x:Name="ShowRDCList" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
                         <materialDesign:PackIcon Kind="MonitorMultiple" Width="32" Height="32" Foreground="White" />
                     </Button>
@@ -18,10 +18,12 @@
                     <Button x:Name="StopCurrentRDC" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
                         <materialDesign:PackIcon Kind="Stop" Width="32" Height="32" Foreground="White" />
                     </Button>
+                </StackPanel>
+                <StackPanel VerticalAlignment="Bottom">
                     <Button x:Name="ShowUserAccounts" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
                         <materialDesign:PackIcon Kind="Account" Width="32" Height="32" Foreground="White" />
                     </Button>
-                    <Button x:Name="ShowRDCGroups" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                    <Button x:Name="ShowRDCGroups" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,30" Padding="0">
                         <materialDesign:PackIcon Kind="Group" Width="32" Height="32" Foreground="White" />
                     </Button>
                 </StackPanel>
