--- a/Source/RDCManager/Views/RDCSessionView.xaml
+++ b/Source/RDCManager/Views/RDCSessionView.xaml
@@ -9,14 +9,16 @@
              mc:Ignorable="d">
     <UserControl.Resources>
         <conv:BooleanToVisiblityConverter x:Key="BooleanToVisiblityConverter" />
+        <conv:NullToVisiblityConverter x:Key="NullToVisiblityConverter" />
+        <conv:BooleanNotToVisiblityConverter x:Key="BooleanNotToVisiblityConverter" />
     </UserControl.Resources>
     <Grid>
-        <ContentControl Content="{Binding SelectedRDC.Session}" Visibility="{Binding SelectedRDC.IsRunning, Converter={StaticResource BooleanToVisiblityConverter}}" />
-        <StackPanel HorizontalAlignment="Center" Width="200" Background="#0747a6" VerticalAlignment="Top" Visibility="{Binding SelectedRDC.IsRunning, Converter={StaticResource BooleanToVisiblityConverter}}">
+        <ContentControl Content="{Binding SelectedRDC.Session}" Visibility="{Binding SelectedRDC.IsRunning, Converter={StaticResource BooleanToVisiblityConverter}, FallbackValue=Collapsed}" />
+        <StackPanel HorizontalAlignment="Center" Width="200" Background="#0747a6" VerticalAlignment="Top" Visibility="{Binding SelectedRDC.IsRunning, Converter={StaticResource BooleanToVisiblityConverter}, FallbackValue=Collapsed}">
             <TextBlock Text="{Binding SelectedRDC.DisplayName}" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center" />
         </StackPanel>
-        <TextBlock Text="Choose an rdc to get started..." Foreground="LightGray" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource MaterialDesignHeadlineTextBlock}" Visibility="{Binding NoSelectedRDC, Converter={StaticResource BooleanToVisiblityConverter}}" />
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="{Binding StoppedRDC, Converter={StaticResource BooleanToVisiblityConverter}}">
+        <TextBlock Text="Choose an rdc to get started..." Foreground="LightGray" HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource MaterialDesignHeadlineTextBlock}" Visibility="{Binding SelectedRDC, Converter={StaticResource NullToVisiblityConverter}}" />
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Visibility="{Binding SelectedRDC.IsRunning, Converter={StaticResource BooleanNotToVisiblityConverter}, FallbackValue=Collapsed}">
             <TextBlock Text="RDC Settings" Style="{StaticResource MaterialDesignDisplay1TextBlock}" Margin="0,0,0,30" Foreground="LightGray" />
             <StackPanel>
                 <Grid>
