--- a/Source/RDCManager/Views/ShellView.xaml
+++ b/Source/RDCManager/Views/ShellView.xaml
@@ -14,16 +14,16 @@
         <DockPanel>
             <Grid DockPanel.Dock="Left" Background="#0747a6">
                 <StackPanel VerticalAlignment="Top">
-                    <Button x:Name="ShowRDCList" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                    <Button x:Name="ShowRDCList" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0" ToolTip="RDC Collection">
                         <materialDesign:PackIcon Kind="MonitorMultiple" Width="32" Height="32" Foreground="White" />
                     </Button>
-                    <Button x:Name="ShowRDCSession" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                    <Button x:Name="ShowRDCSession" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0" ToolTip="Selected RDC">
                         <materialDesign:PackIcon Kind="Monitor" Width="32" Height="32" Foreground="White" />
                     </Button>
-                    <Button x:Name="StopCurrentRDC" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                    <Button x:Name="StopCurrentRDC" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0" ToolTip="Stop Selected RDC">
                         <materialDesign:PackIcon Kind="Stop" Width="32" Height="32" Foreground="White" />
                     </Button>
-                    <Button x:Name="ToggleFullScreen" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                    <Button x:Name="ToggleFullScreen" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0" ToolTip="Fullscreen Toggle">
                         <Grid>
                             <materialDesign:PackIcon Kind="Fullscreen" Width="32" Height="32" Foreground="White" Visibility="{Binding IsFullScreen, Converter={StaticResource BooleanNotToVisiblityConverter}}" />
                             <materialDesign:PackIcon Kind="FullscreenExit" Width="32" Height="32" Foreground="White" Visibility="{Binding IsFullScreen, Converter={StaticResource BooleanToVisiblityConverter}}" />
@@ -31,10 +31,10 @@
                     </Button>
                 </StackPanel>
                 <StackPanel VerticalAlignment="Bottom">
-                    <Button x:Name="ShowUserAccounts" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0">
+                    <Button x:Name="ShowUserAccounts" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0" ToolTip="User Accounts">
                         <materialDesign:PackIcon Kind="Account" Width="32" Height="32" Foreground="White" />
                     </Button>
-                    <Button x:Name="ShowRDCGroups" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,30" Padding="0">
+                    <Button x:Name="ShowRDCGroups" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,30" Padding="0" ToolTip="RDC Groups">
                         <materialDesign:PackIcon Kind="Group" Width="32" Height="32" Foreground="White" />
                     </Button>
                 </StackPanel>
