--- a/Source/RDCManager/Views/RDCCollectionView.xaml
+++ b/Source/RDCManager/Views/RDCCollectionView.xaml
@@ -67,7 +67,7 @@
                 </ComboBox>
             </StackPanel>
             <StackPanel HorizontalAlignment="Right">
-                <Button x:Name="NewRDC" Width="50" Height="50" Background="#0747a6" Padding="0">
+                <Button x:Name="NewRDC" Width="50" Height="50" Background="#0078d7" Padding="0">
                     <materialDesign:PackIcon Kind="Plus" Width="32" Height="32" />
                 </Button>
             </StackPanel>
