--- a/Source/RDCManager/Views/ShellView.xaml
+++ b/Source/RDCManager/Views/ShellView.xaml
@@ -12,7 +12,7 @@
     </UserControl.Resources>
     <Grid>
         <DockPanel>
-            <Grid DockPanel.Dock="Left" Background="#0747a6">
+            <Grid DockPanel.Dock="Left" Background="#0078d7">
                 <StackPanel VerticalAlignment="Top">
                     <Button x:Name="ShowRDCList" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,0" Padding="0" ToolTip="RDC Collection">
                         <materialDesign:PackIcon Kind="MonitorMultiple" Width="32" Height="32" Foreground="White" />
