--- a/Source/RDCManager/Views/RDCCollectionView.xaml
+++ b/Source/RDCManager/Views/RDCCollectionView.xaml
@@ -54,6 +54,34 @@
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
+                <ListView.GroupStyle>
+                    <GroupStyle>
+                        <GroupStyle.ContainerStyle>
+                            <Style TargetType="{x:Type GroupItem}">
+                                <Setter Property="Margin" Value="0,0,0,0"/>
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="{x:Type GroupItem}">
+                                            <Expander IsExpanded="True">
+                                                <Expander.Header>
+                                                    <TextBlock FontWeight="Bold">
+                                                        <Run Text="{Binding Path=Name, Mode=OneWay}" />
+                                                        <Run Text="[" />
+                                                        <Run Text="{Binding Path=ItemCount, Mode=OneWay}" />
+                                                        <Run Text="]" />
+                                                    </TextBlock>
+                                                 </Expander.Header>
+                                                <Expander.Content>
+                                                    <ItemsPresenter />
+                                                </Expander.Content>
+                                            </Expander>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </GroupStyle.ContainerStyle>
+                    </GroupStyle>
+                </ListView.GroupStyle>
             </ListView>
         </Border>
         <Grid Margin="0,30,0,0">
