--- a/Source/RDCManager/Views/RDCGroupsView.xaml
+++ b/Source/RDCManager/Views/RDCGroupsView.xaml
@@ -25,7 +25,7 @@
                     <DataTemplate>
                         <Grid Background="#0078d7">
                             <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="Group" Width="40" Height="40" VerticalAlignment="Center" Foreground="White" Margin="10" VerticalContentAlignment="Center" />
+                                <materialDesign:PackIcon Kind="Folder" Width="40" Height="40" VerticalAlignment="Center" Foreground="White" Margin="10" VerticalContentAlignment="Center" />
                                 <StackPanel Margin="10" Width="170">
                                     <TextBox Text="{Binding Name, Mode=TwoWay}" Style="{StaticResource MaterialDesignFloatingHintTextBox}" materialDesign:HintAssist.Hint="Name" Foreground="White" />
                                 </StackPanel>
