--- a/Source/RDCManager/Views/ShellView.xaml
+++ b/Source/RDCManager/Views/ShellView.xaml
@@ -35,7 +35,7 @@
                         <materialDesign:PackIcon Kind="Account" Width="32" Height="32" Foreground="White" />
                     </Button>
                     <Button x:Name="ShowRDCGroups" Style="{StaticResource MaterialDesignFlatButton}" Width="50" Height="50" Margin="0,30,0,30" Padding="0" ToolTip="RDC Groups">
-                        <materialDesign:PackIcon Kind="Group" Width="32" Height="32" Foreground="White" />
+                        <materialDesign:PackIcon Kind="Folder" Width="32" Height="32" Foreground="White" />
                     </Button>
                 </StackPanel>
             </Grid>
